tests/fixtures/parser/should_pass/16_for_static.pas
PROGRAM P;
VAR i: INTEGER;
BEGIN
  FOR STATIC i := 1 TO 3 DO i := i + 1
END.
