tests/fixtures/parser/should_fail/12_exponent_sign_no_digits.pas
(* should_fail: exponent sign with no following digits. *)
PROGRAM P;
CONST C = 1.5E+;
BEGIN
END.
